--- a/my-app/package.json
+++ b/my-app/package.json
@@ -42,7 +42,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mapbox-gl": "^3.9.4",
-    "next": "15.1.6",
+    "next": "^15.3.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -57,7 +57,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/lodash": "^4.17.15",
-    "@types/node": "^20.17.16",
+    "@types/node": "^20.17.46",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
